# find_users_tg_server

./: .env  Cargo.toml  Dockerfile  docker-compose.yml
migrations/: 20240930000000_create_users_to_check_table.sql  20240930000001_create_checked_users_table.sql  20251002000000_create_user_gifts_table.sql
src/: main.rs
src/db/: db.rs  mod.rs  user_checked.rs  user_gifts.rs  user_to_check.rs
src/entities/: mod.rs  user_checked.rs  user_gifts.rs  user_to_check.rs
src/handlers/: hello.rs  mod.rs  user_checked.rs  user_gifts.rs  user_to_check.rs
